add gripper in urdf

--- a/src/tm_gazebo/config/tm_arm_controller.yaml
+++ b/src/tm_gazebo/config/tm_arm_controller.yaml
@@ -10,6 +10,33 @@ arm_controller:
       wrist_1_joint: {trajectory: 0.1, goal: 0.1}
       wrist_2_joint: {trajectory: 0.1, goal: 0.1}
       wrist_3_joint: {trajectory: 0.1, goal: 0.1}
+  # /gazebo_ros_control:
+  #   pid_gains:
+  #     shoulder_1_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     shoulder_2_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     elbow_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     wrist_1_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     wrist_2_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     wrist_3_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  
   stop_trajectory_duration: 0.5
   state_publish_rate:  25
   action_monitor_rate: 10
