--- a/src/tm_gazebo/config/gazebo_ros_control.yaml
+++ b/src/tm_gazebo/config/gazebo_ros_control.yaml
@@ -6,3 +6,29 @@ gazebo_ros_control:
      wrist_1_joint: {p: 100.0, i: 0.01, d: 10.0}
      wrist_2_joint: {p: 100.0, i: 0.01, d: 10.0}
      wrist_3_joint: {p: 100.0, i: 0.01, d: 10.0}
+  #  /gazebo_ros_control:
+  #   pid_gains:
+  #     shoulder_1_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     shoulder_2_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     elbow_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     wrist_1_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     wrist_2_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
+  #     wrist_3_joint:
+  #       p: 100.0
+  #       i: 0.01
+  #       d: 10.0
