--- a/src/tf_transform/package.xml
+++ b/src/tf_transform/package.xml
@@ -54,6 +54,8 @@
   <build_depend>tf</build_depend>
   <build_depend>tm_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>tf</build_export_depend>
@@ -64,6 +66,8 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>tm_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>moveit_core</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
 
 
 
