--- a/src/tf_transform/package.xml
+++ b/src/tf_transform/package.xml
@@ -55,6 +55,7 @@
   <build_depend>tm_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -67,6 +68,7 @@
   <exec_depend>tm_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>moveit_core</exec_depend>
+  <exec_depend>moveit_ros_planning</exec_depend>
   <exec_depend>moveit_ros_planning_interface</exec_depend>
 
 
