--- a/src/feedback_controller/package.xml
+++ b/src/feedback_controller/package.xml
@@ -3,16 +3,16 @@
   <name>feedback_controller</name>
   <version>0.0.0</version>
   <description>The feedback_controller package</description>
-
-  <maintainer email="user@todo.todo">user</maintainer>
-
-  <license>TODO</license>
-
+  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
+  <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>roscpp</depend>
-  <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
 
-  <export></export>
+  <exec_depend>moveit_core</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
+
+  <export>
+  </export>
 </package>
