update camera_broadcaster to static broadcaster, make mailbox fixed in rviz update moveit_demo to make gripper can point forward istead of point upward when go to mailbox feedback_controller still need to finish

--- a/src/feedback_controller/CMakeLists.txt
+++ b/src/feedback_controller/CMakeLists.txt
@@ -7,9 +7,10 @@ add_compile_options(-std=c++11)
 ## Find catkin macros and libraries
 find_package(catkin REQUIRED COMPONENTS
   roscpp
-  rospy
   tf
+  tf2
   std_msgs
+  geometry_msgs
   moveit_core
   moveit_ros_planning
   moveit_ros_planning_interface
