--- a/src/enverob_main/CMakeLists.txt
+++ b/src/enverob_main/CMakeLists.txt
@@ -104,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES enverob_main
-#  CATKIN_DEPENDS enverob_lib roscpp
+ CATKIN_DEPENDS enverob_lib roscpp
 #  DEPENDS system_lib
 )
 
@@ -115,8 +115,9 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
+  ${enverob_lib_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -132,7 +133,10 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/enverob_main_node.cpp)
+add_executable(
+  ${PROJECT_NAME} src/main.cpp
+  ${enverob_lib_SOURCES}  
+)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -145,9 +149,10 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(${PROJECT_NAME}
+  ${catkin_LIBRARIES}
+  enverob_lib
+)
 
 #############
 ## Install ##
