finish mail deliver flow

--- a/src/enverob_lib/CMakeLists.txt
+++ b/src/enverob_lib/CMakeLists.txt
@@ -17,6 +17,8 @@ find_package(catkin REQUIRED COMPONENTS
   moveit_core
   moveit_ros_planning
   moveit_ros_planning_interface
+  moveit_visual_tools
+  trajectory_msgs
 )
 
 ## System dependencies are found with CMake's conventions
