--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ src/tm_description/meshes/gripper.stl
 src/tm_description/meshes/Gripper.stl
 src/tm5-900-moveit_config/launch/moveit.rviz
 devel/
+force_data.csv
 .vscode
 .catkin_workspace
 *.bin
